[package]
name = "sum"
version = "0.1.3"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["data-structures"]
keywords = ["data-structure","sum-type"]
description = """
General-purpose sum types.
"""
repository = "https://github.com/alecmocatta/sum"
homepage = "https://github.com/alecmocatta/sum"
documentation = "https://docs.rs/sum/0.1.3"
readme = "README.md"
# edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/sum", pipeline = "tests" }
maintenance = { status = "actively-developed" }

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[package.metadata.docs.rs]
features = ["serde"]
