[package]
name = "sum"
version = "0.1.6"
license = "MIT OR Apache-2.0"
authors = ["Alec Mocatta <alec@mocatta.net>"]
categories = ["data-structures"]
keywords = ["data-structure","sum-type"]
description = """
General-purpose sum types.
"""
repository = "https://github.com/alecmocatta/sum"
homepage = "https://github.com/alecmocatta/sum"
documentation = "https://docs.rs/sum/0.1"
readme = "README.md"
edition = "2018"

[badges]
azure-devops = { project = "alecmocatta/sum", pipeline = "tests", build = "12" }
maintenance = { status = "actively-developed" }

[features]
default = ["0", "1", "2", "3", "4", "5", "6", "7", "8", "9", "10", "11", "12", "13", "14", "15", "16", "17", "18", "19", "20", "21", "22", "23", "24", "25", "26", "27", "28", "29", "30", "31", "32"]
0 = []
1 = []
2 = []
3 = []
4 = []
5 = []
6 = []
7 = []
8 = []
9 = []
10 = []
11 = []
12 = []
13 = []
14 = []
15 = []
16 = []
17 = []
18 = []
19 = []
20 = []
21 = []
22 = []
23 = []
24 = []
25 = []
26 = []
27 = []
28 = []
29 = []
30 = []
31 = []
32 = []
futures = ["futures-core"]

[dependencies]
futures-core = { version = "0.3", optional = true, default-features = false }
serde = { version = "1.0", optional = true, features = ["derive"] }

[package.metadata.docs.rs]
features = ["serde"]
